--- a/main.html
+++ b/main.html
@@ -10,6 +10,21 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<header>
+		<nav>
+			<ul>
+				<li><a href="https://www.meesho.com/">Home</a></li>
+				<li><a href="https://www.meesho.com/">About us</a></li>
+				<li><a href="https://www.meesho.com/">Contact us</a></li>
+			</ul>
+		</nav>
+	</header>
+	<main>
+		<h1>3 random images</h1>
+		<image src="https://picsum.photos/id/123/200/300" alt="image1"></image>
+		<image src="https://picsum.photos/id/124/200/300" alt="images2"></image>
+			<image src="https://picsum.photos/id/125/200/300" alt="images3"></image>
+	</main>
 
 </body>
 
